--- a/react_on_rails_pro/package.json
+++ b/react_on_rails_pro/package.json
@@ -13,23 +13,25 @@
   "dependencies": {
     "babel-cli": "6.26.0",
     "babel-core": "6.26.3",
-    "babel-loader": "7.1.5",
-    "babel-plugin-module-resolver": "3.1.1",
+    "babel-loader": "8.0.5",
+    "babel-plugin-module-resolver": "3.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.13",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.23",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
-    "babelify": "^7.3.0",
+    "babelify": "^10.0.0",
+    "concurrently": "^4.0.1",
     "console.history": "^1.5.0",
+    "eslint-config-prettier": "^3.1.0",
     "express": "^4.15.2",
-    "express-busboy": "^6.0.1",
-    "fs-extra": "^3.0.1",
+    "express-busboy": "^7.0.1",
+    "fs-extra": "^7.0.1",
     "honeybadger": "^1.3.0",
     "lockfile": "^1.0.4",
     "semver": "^5.5.0",
@@ -38,32 +40,36 @@
     "winston": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-rc.3",
-    "babel-jest": "^23.4.2",
-    "babel-plugin-flow-react-proptypes": "7.0.0",
+    "@babel/core": "^7.2.2",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "babel-plugin-flow-react-proptypes": "24.1.2",
     "babel-plugin-react-transform": "^3.0.0",
     "babel-plugin-typecheck": "^3.9.0",
     "babel-preset-react-hmre": "^1.1.1",
-    "eslint": "^4.9.0",
-    "eslint-config-shakacode": "^16.0.1",
+    "eslint": "^5.12.1",
+    "eslint-config-shakacode": "^17.0.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jest": "^21.22.0",
+    "eslint-plugin-jest": "^22.1.3",
     "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.4.0",
-    "flow-bin": "^0.43.1",
+    "husky": "^1.3.1",
     "jest": "^23.5.0",
-    "jsdom": "^9.12.0",
-    "release-it": "^2.7.1",
+    "jsdom": "^13.1.0",
+    "nps": "^5.9.3",
+    "prettier": "^1.14.3",
+    "prettier-eslint-cli": "^4.7.1",
+    "release-it": "^10.0.1",
     "supertest": "^3.0.0",
     "tap-diff": "^0.1.1",
-    "tap-spec": "^4.1.1",
+    "tap-spec": "^5.0.0",
     "tape": "^4.6.3",
     "tape-async": "^2.3.0",
-    "touch": "^3.1.0"
+    "touch": "^3.1.0",
+    "yalc": "^1.0.0-pre.27"
   },
-  "files": [
-    "packages/vm-renderer/lib"
-  ],
+  "files": ["packages/vm-renderer/lib"],
   "scripts": {
     "test": "jest packages/vm-renderer/tests/**/*.test.js",
     "clean": "rm -rf packages/vm-renderer/lib",
@@ -73,12 +79,11 @@
     "postinstall": "yarn run build",
     "prepublish": "yarn run build",
     "prerelease": "yarn run check && yarn run clean && yarn run build",
-    "start": "echo 'Starting React on Rails Pro VM Renderer using the default configuration.' && node --experimental-modules packages/vm-renderer/lib/default-vm-renderer.js",
+    "start": "nps",
     "developing": "rm -rf /tmp/react-on-rails-pro-vm-renderer-bundles && RENDERER_LOG_LEVEL=info NODE_DEBUG=ROR node  -r source-map-support/register --experimental-modules packages/vm-renderer/lib/default-vm-renderer.js",
     "eslint": "eslint .",
-    "flow": "flow check packages/vm-renderer",
     "lint": "yarn run eslint",
-    "check": "yarn run lint && yarn run flow && yarn run test",
+    "check": "yarn run lint && yarn run test",
     "local": "echo 'Be sure to run yarn run dummy:install' && yarn run build && cd spec/dummy && foreman start",
     "link": "yarn link"
   },
@@ -86,14 +91,7 @@
     "type": "git",
     "url": "git+https://github.com/shakacode/react_on_rails_pro.git"
   },
-  "keywords": [
-    "react",
-    "webpack",
-    "JavaScript",
-    "Ruby",
-    "on",
-    "Rails"
-  ],
+  "keywords": ["react", "webpack", "JavaScript", "Ruby", "on", "Rails"],
   "author": "justin@shakacode.com",
   "license": "MIT",
   "bugs": {
@@ -102,20 +100,19 @@
   "homepage": "https://github.com/shakacode/react_on_rails_pro#readme",
   "jest": {
     "clearMocks": true,
-    "collectCoverageFrom": [
-      "packages/vm-renderer/tests/**/*.{js,jsx}"
-    ],
-    "coverageReporters": [
-      "lcov"
-    ],
+    "collectCoverageFrom": ["packages/vm-renderer/tests/**/*.{js,jsx}"],
+    "coverageReporters": ["lcov"],
     "resetModules": true,
     "resetMocks": true,
-    "setupFiles": [
-      "./packages/vm-renderer/tests/helper.js"
-    ],
+    "setupFiles": ["./packages/vm-renderer/tests/helper.js"],
     "testEnvironment": "node",
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yalc check"
     }
   }
 }
