Update lint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,8 @@ rules:
   # https://github.com/benmosher/eslint-plugin-import/issues/340
   import/no-extraneous-dependencies: 0
 
+  react/jsx-one-expression-per-line: 0
+
 settings:
   import/core-modules:
     - react-redux
