--- a/lib/generators/react_on_rails/templates/.eslintrc
+++ b/lib/generators/react_on_rails/templates/.eslintrc
@@ -29,3 +29,7 @@ rules:
 
   # Deprecated
   jsx-a11y/label-has-for: 0
+
+
+  # https://github.com/yannickcr/eslint-plugin-react/issues/1848
+  react/jsx-one-expression-per-line: 0
