--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -12,7 +12,8 @@ gem "bootsnap", ">= 1.1.0", require: false
 gem "rails"
 
 # Use sqlite3 as the database for Active Record
-gem "sqlite3"
+# depends on Rails 6 to go to sqlite4
+gem "sqlite3", '~> 1.3.6'
 # Use SCSS for stylesheets
 gem "sass-rails"
 # Use Uglifier as compressor for JavaScript assets
