--- a/spec/dummy_no_webpacker/Gemfile
+++ b/spec/dummy_no_webpacker/Gemfile
@@ -8,7 +8,8 @@ eval_gemfile File.expand_path("../../react_on_rails.gemspec", __dir__)
 gem "rails"
 
 # Use sqlite3 as the database for Active Record
-gem "sqlite3"
+# depends on Rails 6 to go to sqlite4
+gem "sqlite3", '~> 1.3.6'
 # Use SCSS for stylesheets
 gem "sass-rails"
 # Use Uglifier as compressor for JavaScript assets
