rspec BDD test pass for dynamic HTML tag for component #1208. chromedriver-helper is depricated now. instead we use webdrivers.

--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -67,7 +67,7 @@ group :test do
   gem "coveralls", require: false
   # install trouble with updated
   # gem "capybara-webkit"
-  gem "chromedriver-helper"
+  gem 'webdrivers', '~> 3.0'
   gem "equivalent-xml", github: "mbklein/equivalent-xml"
   gem "generator_spec"
   gem "launchy"
