--- a/spec/dummy/client/package.json
+++ b/spec/dummy/client/package.json
@@ -15,8 +15,13 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.0.0",
+    "@glennsl/bs-json": "^3.0.0",
     "autoprefixer": "^7.1.2",
     "babel-loader": "^8.0.2",
+    "bs-date-fns": "0.1.6",
+    "bs-fetch": "0.3.1",
+    "bs-log": "0.1.1",
+    "bs-platform": "4.0.5",
     "create-react-class": "^15.6.3",
     "css-loader": "^0.28.4",
     "es5-shim": "^4.5.9",
@@ -35,6 +40,8 @@
     "nps": "^5.9.3",
     "postcss-loader": "^1.3.3",
     "prop-types": "^15.6.2",
+    "re-classnames": "^4.0.0",
+    "re-debouncer": "^2.0.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.1.3",
@@ -43,6 +50,7 @@
     "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.5",
     "react-router": "^3.2.1",
+    "reason-react": "^0.7.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.1.0",
