--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -12,7 +12,7 @@
     "build:production:server": "(cd client && yarn run build:production:server)",
     "build:client": "(cd client && yarn run build:client && bsb -make-world)",
     "build:server": "(cd client && yarn run build:server)",
-    "build:dev:client": "(cd client && yarn run build:dev:client && bsb -make-world -w)",
+    "build:dev:client": "(cd client && yarn run build:dev:client && bsb -w -make-world)",
     "build:dev:server": "(cd client && yarn run build:dev:server)",
     "hot-assets": "(cd client && yarn run hot-assets)"
   },
@@ -31,10 +31,7 @@
   "bugs": {
     "url": "https://github.com/shakacode/react_on_rails/issues"
   },
-  "devDependencies": {
-    "bs-platform": "^5.0.4"
-  },
   "dependencies": {
-    "reason-react": "0.7.0"
+    "bs-react-on-rails": "^0.2.0"
   }
 }
