--- a/react_on_rails_pro/package.json
+++ b/react_on_rails_pro/package.json
@@ -11,21 +11,6 @@
     "doc": "docs"
   },
   "dependencies": {
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-loader": "8.0.5",
-    "babel-plugin-module-resolver": "3.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.23",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "babel-runtime": "^6.26.0",
-    "babelify": "^10.0.0",
     "concurrently": "^4.0.1",
     "console.history": "^1.5.0",
     "eslint-config-prettier": "^3.1.0",
@@ -40,13 +25,6 @@
     "winston": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "babel-plugin-flow-react-proptypes": "24.1.2",
-    "babel-plugin-react-transform": "^3.0.0",
-    "babel-plugin-typecheck": "^3.9.0",
-    "babel-preset-react-hmre": "^1.1.1",
     "eslint": "^5.12.1",
     "eslint-config-shakacode": "^17.0.0",
     "eslint-plugin-import": "^2.8.0",
@@ -71,14 +49,8 @@
   },
   "files": ["packages/vm-renderer/lib"],
   "scripts": {
-    "test": "jest packages/vm-renderer/tests/**/*.test.js",
-    "clean": "rm -rf packages/vm-renderer/lib",
-    "babel": "babel --out-dir packages/vm-renderer/lib packages/vm-renderer/src",
-    "build": "yarn run clean && yarn run babel",
-    "build:dev": "yarn run clean && yarn run babel -w --source-maps",
-    "postinstall": "yarn run build",
-    "prepublish": "yarn run build",
-    "prerelease": "yarn run check && yarn run clean && yarn run build",
+    "test": "npx -n '--experimental-modules' jest packages/vm-renderer/tests/**/*.test.js",
+    "prerelease": "yarn run check",
     "start": "nps",
     "developing": "rm -rf /tmp/react-on-rails-pro-vm-renderer-bundles && RENDERER_LOG_LEVEL=info NODE_DEBUG=ROR node  -r source-map-support/register --experimental-modules packages/vm-renderer/lib/default-vm-renderer.js",
     "eslint": "eslint .",
