--- a/spec/dummy/client/package.json
+++ b/spec/dummy/client/package.json
@@ -22,6 +22,7 @@
     "expose-loader": "^0.7.3",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "fs-extra": "^8.0.1",
     "history": "^4.6.3",
     "imports-loader": "^0.7.1",
     "jquery": "^3.2.1",
