Add changes regarding rubocop style rule

--- a/react_on_rails_pro/spec/dummy/Gemfile
+++ b/react_on_rails_pro/spec/dummy/Gemfile
@@ -1,3 +1,5 @@
+# frozen_string_literal: true
+
 source "https://rubygems.org"
 
 eval_gemfile File.expand_path("../../react_on_rails_pro.gemspec", __dir__)
