--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -61,7 +61,6 @@ end
 group :test do
   gem "capybara"
   gem "capybara-screenshot"
-  gem "chromedriver-helper"
   gem "coveralls", require: false
   gem "equivalent-xml", github: "mbklein/equivalent-xml"
   gem "generator_spec"
@@ -69,5 +68,5 @@ group :test do
   gem "rails-controller-testing"
   gem "rspec-rails"
   gem "rspec_junit_formatter"
-  gem "selenium-webdriver"
+  gem "webdrivers"
 end
