Improve error handling (#103)
* Improve error handling
* switch to webdrivers
* Remove selenium-webdriver
* Update docker image to 2.5-node-browsers
* Add install-yarn-link-destination before install node modules
* Add minimum required chrome version
* Change option names regarding new names in chromedriver, turn off w3c

--- a/react_on_rails_pro/spec/dummy/Gemfile
+++ b/react_on_rails_pro/spec/dummy/Gemfile
@@ -61,7 +61,6 @@ end
 group :test do
   gem "capybara"
   gem "capybara-screenshot"
-  gem "chromedriver-helper"
   gem "coveralls", require: false
   gem "equivalent-xml", github: "mbklein/equivalent-xml"
   gem "generator_spec"
@@ -69,5 +68,5 @@ group :test do
   gem "rails-controller-testing"
   gem "rspec-rails"
   gem "rspec_junit_formatter"
-  gem "selenium-webdriver"
+  gem "webdrivers"
 end
