--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -14,6 +14,8 @@
     "es5-shim": "^4.5.9",
     "extract-text-webpack-plugin": "^3.0.0",
     "history": "^4.6.3",
+    "jquery": "^3.2.1",
+    "jquery-ujs": "^1.2.2",
     "lodash": "^4.17.4",
     "nps": "^5.9.3",
     "prop-types": "^15.6.2",
@@ -28,6 +30,7 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
     "sass-resources-loader": "^2.0.0",
+    "webpack-cli": "^3.3.4",
     "webpack-merge": "^4.1.5"
   },
   "devDependencies": {
