--- a/spec/dummy/client/package.json
+++ b/spec/dummy/client/package.json
@@ -77,12 +77,12 @@
     "lint": "eslint --ext .js,.jsx .",
     "test": "yarn run build:test && rspec",
     "build:test": "yarn run build:test:client && yarn run build:test:server",
-    "build:test:client": "NODE_ENV=test webpack --config webpack.client.rails.build.config.js",
-    "build:test:server": "NODE_ENV=test webpack --config webpack.server.rails.build.config.js",
-    "build:dev:client": "NODE_ENV=development webpack -w --config webpack.client.rails.build.config.js",
-    "build:dev:server": "NODE_ENV=development webpack -w --config webpack.server.rails.build.config.js",
-    "build:production:client": "NODE_ENV=production webpack -p --config webpack.client.rails.build.config.js",
-    "build:production:server": "NODE_ENV=production webpack -p --config webpack.server.rails.build.config.js",
+    "build:test:client": "NODE_ENV=test ../bin/webpack --config client/webpack.client.rails.build.config.js",
+    "build:test:server": "NODE_ENV=test ../bin/webpack --config client/webpack.server.rails.build.config.js",
+    "build:dev:client": "NODE_ENV=development ../bin/webpack -w --config client/webpack.client.rails.build.config.js",
+    "build:dev:server": "NODE_ENV=development ../bin/webpack -w --config clientwebpack.server.rails.build.config.js",
+    "build:production:client": "NODE_ENV=production ../bin/webpack -p --config client/webpack.client.rails.build.config.js",
+    "build:production:server": "NODE_ENV=production ../bin/webpack -p --config client/webpack.server.rails.build.config.js",
     "build:production": "yarn run build:production:server && yarn run build:production:client",
     "hot-assets": "NODE_ENV=development babel-node server-rails-hot.js"
   },
