--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -11,6 +11,8 @@
     "@rails/webpacker": "^4.0.2",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "es5-shim": "^4.5.9",
+    "extract-text-webpack-plugin": "^3.0.0",
     "history": "^4.6.3",
     "lodash": "^4.17.4",
     "nps": "^5.9.3",
@@ -18,6 +20,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.1.3",
+    "react-hot-loader": "^4.3.6",
     "react-on-rails": "11.2.2",
     "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.5",
