Custom configs removed, update configuration.md

--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -6,7 +6,7 @@ eval_gemfile File.expand_path("../../react_on_rails.gemspec", __dir__)
 
 gem "react_on_rails", path: "../.."
 
-# webpacker source from master since 4.0.2 has not released the commit nessecary for debugging
+# We'll revert this before the final merge.
 gem "webpacker", git: 'https://github.com/rails/webpacker.git'
 
 gem "bootsnap", ">= 1.1.0", require: false
