--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -57,9 +57,13 @@
     "lint": "cd client && yarn run lint",
     "test": "yarn run build:test && yarn run lint && rspec",
     "build:test": "yarn run build:test:client && yarn run build:test:server",
-    "build:clean": "rm -rf public/webpack || true",
-    "build:dev:client": "NODE_ENV=development webpack -w --config client/webpack.client.rails.build.config.js",
-    "build:dev:server": "NODE_ENV=development webpack -w --config client/webpack.server.rails.build.config.js",
-    "hot-assets": "cd client && yarn run hot-assets"
+    "build:test:client": "RAILS_ENV=test NODE_ENV=test webpack ",
+    "build:test:server": "RAILS_ENV=test NODE_ENV=test webpack-dev-server ",
+    "build:dev:client": "RAILS_ENV=development NODE_ENV=development webpack",
+    "build:dev:server": "RAILS_ENV=development NODE_ENV=development webpack-dev-server",
+    "build:production:client": "RAILS_ENV=development NODE_ENV=production webpack",
+    "build:production:server": "RAILS_ENV=development NODE_ENV=production webpack-dev-server",
+    "build:production": "yarn run build:production:server && yarn run build:production:client",
+    "hot-assets": "NODE_ENV=development babel-node server-rails-hot.js"
   }
 }
