added dev server config for test, removed vendor-bundle from layout, changing dependencies(babel)

--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -7,15 +7,22 @@
   },
   "main": "js/app.js",
   "dependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
-    "@rails/webpacker": "^4.0.2",
+    "@babel/runtime": "^7.4.5",
+    "@rails/webpacker": "^4.0.7",
+    "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "core-js": "2",
     "es5-shim": "^4.5.9",
     "extract-text-webpack-plugin": "^3.0.0",
     "history": "^4.6.3",
-    "jquery": "^3.2.1",
-    "jquery-ujs": "^1.2.2",
     "lodash": "^4.17.4",
     "nps": "^5.9.3",
     "prop-types": "^15.6.2",
@@ -34,7 +41,6 @@
     "webpack-merge": "^4.1.5"
   },
   "devDependencies": {
-    "babel-cli": "^6.6.5",
     "eslint": "^5.7.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-config-shakacode": "^16.0.1",
@@ -57,12 +63,13 @@
     "lint": "cd client && yarn run lint",
     "test": "yarn run build:test && yarn run lint && rspec",
     "build:test": "yarn run build:test:client && yarn run build:test:server",
-    "build:test:client": "RAILS_ENV=test NODE_ENV=test webpack ",
-    "build:test:server": "RAILS_ENV=test NODE_ENV=test webpack-dev-server ",
-    "build:dev:client": "RAILS_ENV=development NODE_ENV=development webpack",
-    "build:dev:server": "RAILS_ENV=development NODE_ENV=development webpack-dev-server",
-    "build:production:client": "RAILS_ENV=development NODE_ENV=production webpack",
-    "build:production:server": "RAILS_ENV=development NODE_ENV=production webpack-dev-server",
+    "build:clean": "rm -rf public/webpack || true",
+    "build:test:client": "RAILS_ENV=test NODE_ENV=test bin/webpack ",
+    "build:test:server": "RAILS_ENV=test NODE_ENV=test bin/webpack-dev-server ",
+    "build:dev:client": "RAILS_ENV=development NODE_ENV=development bin/webpack",
+    "build:dev:server": "RAILS_ENV=development NODE_ENV=development bin/webpack-dev-server",
+    "build:production:client": "RAILS_ENV=development NODE_ENV=production bin/webpack",
+    "build:production:server": "RAILS_ENV=development NODE_ENV=production bin/webpack-dev-server",
     "build:production": "yarn run build:production:server && yarn run build:production:client",
     "hot-assets": "NODE_ENV=development babel-node server-rails-hot.js"
   }
