--- a/spec/dummy/config/webpacker.yml
+++ b/spec/dummy/config/webpacker.yml
@@ -85,6 +85,25 @@ test:
   # Compile test packs to a separate directory
   public_output_path: webpack/test
 
+  dev_server:
+    https: false
+    host: localhost
+    port: 3035
+    public: localhost:3035
+    hmr: false
+    # Inline should be set to true if using HMR
+    inline: true
+    overlay: true
+    compress: true
+    disable_host_check: true
+    use_local_ip: false
+    quiet: false
+    headers:
+      'Access-Control-Allow-Origin': '*'
+    watch_options:
+      ignored: '**/node_modules/**'
+
+
 production:
   <<: *default
 
