server-bundle is configured, still has problems with babel config and defninitions, require is not defnined

--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -10,7 +10,7 @@
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
@@ -18,7 +18,10 @@
     "@rails/webpacker": "^4.0.7",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
     "core-js": "2",
     "es5-shim": "^4.5.9",
     "extract-text-webpack-plugin": "^3.0.0",
