--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "core-js": "2",
+    "create-react-class": "^15.6.3",
     "css-loader": "^0.28.4",
     "es5-shim": "^4.5.9",
     "eslint-plugin-prettier": "^3.1.0",
@@ -42,7 +43,7 @@
     "nps": "^5.9.3",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.6.2",
-    "react": "^16.5.2",
+    "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.1.3",
     "react-hot-loader": "^4.5.3",
