--- a/spec/dummy/config/webpacker.yml
+++ b/spec/dummy/config/webpacker.yml
@@ -7,7 +7,7 @@ default: &default
 
   cache_path: tmp/cache/webpacker
   check_yarn_integrity: false
-  webpack_compile_output: true
+  webpack_compile_output: false
 
   # Additional paths webpack should lookup modules
   # ['app/assets', 'engine/foo/app/assets']
@@ -80,7 +80,7 @@ development:
 
 test:
   <<: *default
-  compile: true
+  compile: false
 
   # Compile test packs to a separate directory
   public_output_path: webpack/test
