--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -5,7 +5,7 @@
     "type": "git",
     "url": "https://github.com/shakacode/react_on_rails.git"
   },
-  "main": "js/app.js",
+  "private": true,
   "dependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
@@ -46,7 +46,6 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.1.3",
-    "react-hot-loader": "^4.5.3",
     "react-on-rails": "11.2.2",
     "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.5",
@@ -74,6 +73,7 @@
     "preload-webpack-plugin": "^3.0.0-alpha.1",
     "prettier": "^1.14.3",
     "prettier-eslint-cli": "^4.7.1",
+    "react-hot-loader": "^4.5.3",
     "tape": "^4.7.0",
     "webpack-dev-server": "^3.2.1"
   },
