improve code splitting implementation, not done, trim, ci has minified asset warning in wrong env err

--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-react": "^6.24.1",
     "core-js": "2",
     "create-react-class": "^15.6.3",
@@ -38,7 +39,7 @@
     "node-sass": "^4.12.0",
     "nps": "^5.9.3",
     "postcss-loader": "^3.0.0",
-    "prop-types": "^15.6.2",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.1.3",
