HMR console error & code-splitting deferred async resolved

--- a/spec/dummy/config/webpacker.yml
+++ b/spec/dummy/config/webpacker.yml
@@ -56,7 +56,7 @@ development:
   public_output_path: webpack/development
 
   # Verifies that correct packages and versions are installed by inspecting package.json, yarn.lock, and node_modules
-  check_yarn_integrity: true
+  check_yarn_integrity: false
 
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
@@ -64,7 +64,7 @@ development:
     host: localhost
     port: 3035
     public: localhost:3035
-    hmr: false
+    hmr: true
     # Inline should be set to true if using HMR
     inline: true
     overlay: true
