--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -41,7 +41,7 @@ gem "sdoc", group: :doc
 # Use Unicorn as the app server
 # gem 'unicorn'
 
-# Use Capistrano for deployment
+gem 'sprockets', '~>3.0'# Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 gem "awesome_print"
 gem "mini_racer"
