--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -7,7 +7,7 @@ eval_gemfile File.expand_path("../../react_on_rails.gemspec", __dir__)
 gem "react_on_rails", path: "../.."
 
 # We'll revert this before the final merge.
-#gem "webpacker", git: 'https://github.com/rails/webpacker.git'
+# gem "webpacker", git: 'https://github.com/rails/webpacker.git'
 gem "webpacker"
 
 gem "bootsnap", ">= 1.1.0", require: false
@@ -41,7 +41,9 @@ gem "sdoc", group: :doc
 # Use Unicorn as the app server
 # gem 'unicorn'
 
-gem 'sprockets', '~>3.0'# Use Capistrano for deployment
+gem "sprockets", "~>3.0"
+
+# Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 gem "awesome_print"
 gem "mini_racer"
