--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,7 +3,7 @@
 
 AllCops:
   DisplayCopNames: true
-  TargetRubyVersion: 2.2
+  TargetRubyVersion: 2.3
 
   Include:
     - '**/Rakefile'
@@ -63,6 +63,7 @@ Lint/SuppressedException:
   Exclude:
     - 'spec/dummy/bin/rails'
     - 'spec/dummy/bin/rake'
+    - 'spec/react_on_rails/test_helper/webpack_assets_compiler_spec.rb'
 
 Metrics/AbcSize:
   Max: 28
@@ -91,4 +92,4 @@ Style/GlobalVars:
     - 'spec/dummy/config/environments/development.rb'
 
 Style/FrozenStringLiteralComment:
-  EnforcedStyle: when_needed
+  EnforcedStyle: always
