--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -42,12 +42,13 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.1.3",
+    "react-helmet": "^6.0.0-beta.2",
     "react-hot-loader": "^4.12.12",
     "react-on-rails": "11.2.2",
     "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.5",
     "react-router": "^3.2.1",
+    "react-select": "^2.0.0-beta.7",
     "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^3.1.0",
