--- a/react_on_rails_pro/package.json
+++ b/react_on_rails_pro/package.json
@@ -34,7 +34,7 @@
     "husky": "^1.3.1",
     "jest": "^23.5.0",
     "jsdom": "^13.1.0",
-    "nps": "^5.9.3",
+    "nps": "^5.9.12",
     "prettier": "^1.14.3",
     "prettier-eslint-cli": "^4.7.1",
     "release-it": "^10.0.1",
@@ -46,7 +46,9 @@
     "touch": "^3.1.0",
     "yalc": "^1.0.0-pre.27"
   },
-  "files": ["packages/vm-renderer/src"],
+  "files": [
+    "packages/vm-renderer/src"
+  ],
   "scripts": {
     "test": "jest packages/vm-renderer/tests/**/*.test.js",
     "prerelease": "yarn run check",
@@ -62,7 +64,14 @@
     "type": "git",
     "url": "git+https://github.com/shakacode/react_on_rails_pro.git"
   },
-  "keywords": ["react", "webpack", "JavaScript", "Ruby", "on", "Rails"],
+  "keywords": [
+    "react",
+    "webpack",
+    "JavaScript",
+    "Ruby",
+    "on",
+    "Rails"
+  ],
   "author": "justin@shakacode.com",
   "license": "MIT",
   "bugs": {
@@ -71,11 +80,17 @@
   "homepage": "https://github.com/shakacode/react_on_rails_pro#readme",
   "jest": {
     "clearMocks": true,
-    "collectCoverageFrom": ["packages/vm-renderer/tests/**/*.{js,jsx}"],
-    "coverageReporters": ["lcov"],
+    "collectCoverageFrom": [
+      "packages/vm-renderer/tests/**/*.{js,jsx}"
+    ],
+    "coverageReporters": [
+      "lcov"
+    ],
     "resetModules": true,
     "resetMocks": true,
-    "setupFiles": ["./packages/vm-renderer/tests/helper.js"],
+    "setupFiles": [
+      "./packages/vm-renderer/tests/helper.js"
+    ],
     "testEnvironment": "node",
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
