Update to minor npm updates (#111)
* This addresses issues with using Node 13
* Stop formatting package.json

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -50,7 +50,7 @@ Lint/AssignmentInCondition:
   Exclude:
     - 'spec/dummy/bin/spring'
 
-Lint/HandleExceptions:
+Lint/SuppressedException:
   Exclude:
     - 'spec/dummy/bin/rails'
     - 'spec/dummy/bin/rake'
