--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -86,6 +86,9 @@ Metrics/MethodLength:
 Metrics/ModuleLength:
   Max: 180
 
+Naming/RescuedExceptionsVariableName:
+  Enabled: false
+
 Style/GlobalVars:
   Exclude:
     - 'spec/dummy/config/environments/development.rb'
