--- a/package-scripts.yml
+++ b/package-scripts.yml
@@ -31,10 +31,11 @@ scripts:
       default:
         description: Run prettier-eslint on JS.
         #script: prettier "packages/**/*.@(js|jsx)" "spec/dummy/client/app/**/*.@(js|jsx)" "webpack.config.babel.js" "webpack/**/*.js" --write
-        script: prettier "**/*.@(js|jsx) --write
+        script: prettier "**/*.@(js|jsx)" --write
       listDifferent:
         description: Check if any JS files would change by running prettier-eslint.
-        script: prettier "**/*.@(js|jsx)" "webpack.config.babel.js" "webpack/**/*.js" --list-different
+        # script: prettier "**/*.@(js|jsx)" "webpack.config.babel.js" "webpack/**/*.js" --list-different
+        script: prettier "**/*.@(js|jsx)" --list-different
     json:
       default:
         description: Run prettier on JSON files.
